Adding initial surelog support

--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,9 @@
 	url = https://github.com/bsg-external/dromajo
     branch = blackparrot_mods
     update = checkout
+[submodule "tools/Surelog"]
+    path = tools/Surelog
+    url = https://github.com/alainmarcel/Surelog
+    branch = master
+    ignore = untracked
+    update = checkout
